<resources>
    <string name="app_name">Jux</string>
    <string name="access_token">pk.eyJ1Ijoib2NlYW40MyIsImEiOiJjanZndjN3bGUwODdsNDlwYzFycXA2NjFlIn0.CI1uYcT-QbSZifCfz9SqwA</string>
    <string name="categories_label">Categories</string>
    <string name="app_settings">Settings</string>
    <string name="app_info">Info</string>
    <string-array name="category_list">
        <item value="mech">Mechanic</item>
        <item value="elec">Electrician</item>
        <item value="bank">Bank</item>
        <item value="plumb">Plumber</item>
        <item value="aircon">a/c repair</item>
    </string-array>
    <string name="map_light">Light map</string>
    <string name="map_dark">Dark map</string>
    <string name="map_street">Streets map</string>
    <string name="map_traffic_day">Traffic day</string>
    <string name="map_traffic_night">Traffic night</string>
    <string name="user_location_permission_not_granted">Permission denied!</string>
    <string name="user_location_permission_explanation">This app needs to access your location to work</string>
</resources>
